projects/website/base/website-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: website
  name: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - image: ghcr.io/illiumst/website:latest
          name: website
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
      restartPolicy: Always
