projects/website/base/website-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: website
  name: website
spec:
  ports:
    - name: http
      port: 9999
      targetPort: 80
  selector:
    app: website
