projects/website/base/website-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: website-ingress
  namespace: website
spec:
  entryPoints:
    - websecure-front
    - websecure-local
  routes:
  - match: Host(`www.steffenillium.de`) || Host(`steffenillium.de`) 
    kind: Rule
    services:
    - name: website
      port: http
    tls: {}
